# pyNorm

./: .gitignore  00Structure  00ToDo  00whatidid  Installation.md  README.md  __init__.py  data_model.md  does_it_all.py  pyproject.toml
aod/: __init__.py  icol.pro  icol_batch.pro  icol_batch.py  istat2.pro  pyNorm_DataModel.ipynb  pyn_aod.py  pyn_column.py  rbs2005_SiII1260_o.save  testing.ipynb  using_pyNorm.aod.ipynb  xlimit.py
autocontinuum/: i2pyrc.py  nl_continuum_aod.py  nl_do_cont_aod.pro  nl_do_cont_aod.py  pyn_autocontinuum.py
continuum/: __init__.py  pyn_autocontinuum.py  pyn_continuum.py
distrib/: avg.py  ftest.py  i2py_log.txt  iaxis.py  icol.py  icol_batch.pro  icol_batch.pro.bck  icol_prep.pro  icol_prep.pro.bck  icol_prep.py  icol_prep_batch.pro  icont.pro  icont.pro.bck  ieqw.pro  iexpnd.py  ifind.pro  imask.pro  imask.pro.bck  imath.py  imnormtoinorm.pro  imnormtoinorm.py  inorm.pro  inormsave.pro  irebin.py  istat2.pro.bck  istat2.py  itrim.py  iyfit.pro  iyfit.pro.bck  legfit.pro.bck  legfit.py  xlimit.py
distrib/pro/: fix_man_calls.csh  ftest.pro  iblem.pro  icol.pro  icol.pro.bck  (+20 more)
docs/: CIV1548.2i_o.save  iNorm_DataModel.ipynb  pyNorm_DataModel.ipynb  rbcodes_example.ipynb  testing.ipynb  using_pyNorm.aod.ipynb
io/: pyn_io.py
lists/: ilines.save  lineslls.dat.bck
nl_aod/: icol.py  icol_batch.pro  icol_batch.py  ieqw.pro  istat2.pro  istat2.py  nl_continuum_aod.py  testing.ipynb  xlimit.pro  xlimit.py
pro_distrib/: iblem.py  icol.py  icol_batch.py  icont.pro  icurs.py  ieqw.py  ifind.py  igauss.pro  inormsave.py  irebin.py  iyfit.py  legerr.py  legpoly.py  xlimit.py
(+45 files in other folders)
