[tool.poetry]
name = "pyNorm"
version = "0.3.3"
description = "ND CGM group absorption line analysis code."
authors = ["Chris Howk <jchowk@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.2"
numpy = "^1.21"
matplotlib = "^3"
scipy = "^1.7"
linetools = "^0"
pandas = "^1.3"
PyQt5 = "^5.15"
future = "^0.18"
setuptools = "^65.0.0"  
statistics = "^1.0.3.5"  

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"