[tool.poetry]
name = "pyNorm"
version = "0.3.3"
description = "ND CGM group absorption line analysis code."
authors = ["Chris Howk <jchowk@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
astropy = ">=5.2,<8.0"
numpy = ">=1.23,<3.0"
matplotlib = ">3"
scipy = ">=1.7"
linetools = ">=0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
